kinematics.css
/* ... */
.yellow-outline {
  box-shadow: 0 0 2px 2px #F1C40F, 0 0 4px 4px #333 !important;
  outline: none !important;
}
.yellow-outline:focus {
  border: 1px solid #ccc !important;
}
.form-divider {
  width:80%;
  height:2px;
  margin: 11.5px auto;
  background-color:black;
}
.accl-units {
  display: none;
}
input[type="radio"] {
  vertical-align: middle !important;
  width:20px;
  height:35px;
}

/*--- Equation Pics and Form Controls ---*/
#equation-heading {
  margin-bottom: 25px;
}
#solo-image {
  position: relative;
}
#solo-image > img {
	height: 140px;
  border-radius: 4px;
  box-shadow: 0 0 10px #333;
}
.car-icon img {
  box-shadow: none !important;
	width:50px;
	height:50px;
}
#car-icon-one {
  position: absolute;
  top: 7%;
  left: 2%;
}
#car-icon-two {
  position: absolute;
  top: 35%;
  left: 2%;
}
#car-icon-three {
  position: absolute;
  top: 63%;
  left: 2%;
}
#animation-btns-container {
	display:grid;
	width:100%;
	grid-template-columns:repeat(3, 1fr);
	grid-column-gap:10px;
	margin:24px auto;
}
.animate-car-btn {
  color: var(--main-black-color);
  background-color: transparent;
	border:2px solid var(--main-black-color);
  padding:7px;
  border-radius: 4px;
	font-weight: bold;
  transition: 0.4s;
  cursor: pointer;
  user-select: none;
}
.animate-car-btn:hover {
	background-color: var(--main-yellow-color);
}
.car-one-animation {
  animation-name: carOneAnimation;
  animation-duration: 3s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
}
.car-two-animation {
  animation-name: carTwoAnimation;
  animation-duration: 3s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
}
.car-three-animation {
  animation-name: carThreeAnimation;
  animation-duration: 3s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
}
@keyframes carOneAnimation {
  0% {
    top: 7%; left: 2%;
  }
  50% {
    top: 7%; left: 40%;
  }
  100% {
    top: 7%; left: 75%;
  }
}
@keyframes carTwoAnimation {
  0% {
    top: 35%; left: 2%;
  }
  25% {
    top: 35%; left: 10%;
  }
  50% {
    top: 35%; left: 20%;
  }
  75% {
    top: 35%; left: 40%;
  }
  100% {
    top: 35%; left: 75%;
  }
}
@keyframes carThreeAnimation {
  0% {
    top: 63%; left: 2%;
  }
  25% {
    top: 63%; left: 40%;
  }
  50% {
    top: 63%; left: 60%;
  }
  75% {
    top: 63%; left: 70%;
  }
  100% {
    top: 63%; left: 75%;
  }
}
#street-light-img {
	width:50px;
	height:auto;
	position:absolute;
	top:50%;
	right:10px;
	transform:translateY(-50%);
	border:1px solid black;
	border-radius: 4px;
}
#outer-image-container {
  position: relative;
  width: 100%;
  height: 145px;
  border-radius: 4px !important;
  box-shadow: 0 0 10px #333;
  overflow: hidden !important;
}
#inner-image-container {
  position: relative;
  left: 0;
  display: flex;
  width: 100%;
  height: 100%;
  transition: 0.5s;
}
#inner-image-container img {
  width: 100%;
  height: 100%;
}

#outer-image-container:hover #slide-arrow-btns {
  opacity: 1;
}
#slide-arrows-container {
	width: 94.5%;
	height: auto;
	position: absolute;
	top: 7px;
	left: 50%;
	transform: translateX(-50%);
  opacity: 1;
  transition: opacity 0.5s;
  cursor: pointer;
}
.slide-arrow-btn {
	width: 100px;
  font-size: 1.5rem;
	font-weight: bold;
  color: var(--main-black-color);
	border: 2px solid var(--main-black-color);
  border-radius: 4px;
  background-color: transparent;
  transition: 0.3s;
}
.slide-arrow-btn:hover {
	background-color: var(--main-yellow-color);
	color: var(--main-black-color);
}
#prev-slide-btn {
  position: absolute;
  top: 0;
	left: 0;
}
#next-slide-btn {
  position: absolute;
  top: 0;
  right: 0;
}
#slide-bar-indicators {
	width: 80%;
  position: absolute;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%);
  opacity: 0;
  transition: 0.5s;
}
.slide-bar {
  display: inline-block;
  width: 35px;
  height: 6px;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #333;
  cursor: pointer;
  transition: 0.5s;
}
.slide-bar:hover:not(.active-indicator) {
  background-color: #333;
}
#outer-image-container:hover #slide-bar-indicators {
  opacity: 1;
}
.active-indicator {
  background-color: #F1C40F;
}
.#outer-image-container:hover #prev-slide-btn,
.#outer-image-container:hover #next-slide-btn {
  opacity: 1;
  border-radius: 0;
}
/*--- End of Equation Pics ---*/

/*--- Background Modules ---*/
.module-section {
  width: 100%;
  height: auto;
  padding: 5px;
}
.module-box {
  width: 100%;
  height: 51px;
  perspective: 500px;
}
.module {
  display: block;
  position: relative;
  width: 100%;
  height: 100%;
  transform-style: preserve-3d;
  transform-origin: center;
  transition: 0.5s;
}
.module-front,
.module-back {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
  transition: 0.5s;
}
.module-front {
  color: #F1C40F;
  font-weight: bold;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #333;
}
.module-back {
  display: flex;
  text-align: center;
  padding: 5px;
  align-items: center;
  justify-content: center;
  font-weight: bold;
  background-color: #F1C40F;
  transform: rotateX(180deg);
}

.module-img {
  margin-top: 10px;
}
.module-img img {
  border-radius: 5px;
  width: 100%;
  height: 390px;
	margin-bottom: 5px;
}
.module-box:hover > .module {
  transform: rotateX(180deg);
}
#first-front,
#first-back {
  border-radius: 6px 6px 0 0;
}
#last-front,
#last-back {
  border-radius: 0 0 6px 6px;
}
/*--- End of Background Modules ---*/

/*--- Third Page Pictures ---*/
.third-page-pics {
  position: relative;
}
.third-page-pics img {
  width:100%;
  height: 230px;
  border-radius: 4px;
  box-shadow: 0 0 10px rgba(0,0,0,0.5);
}
/* ... */

